# Image_Processor

./: CMakeLists.txt  binary_data_process.cpp  binary_data_process.h  bmp_process.cpp  bmp_process.h  image.cpp  image.h  image_processor.cpp  pixel.cpp  pixel.h  readme.md
controller/: controller.cpp  controller.h
filters/: abstract_filter.h  bilateral_filter.cpp  bilateral_filter.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  iterative_filter.cpp  iterative_filter.h  matrix_filter.cpp  matrix_filter.h  negative_filter.cpp  negative_filter.h  sharpening_filter.cpp  sharpening_filter.h  two_pass_blur_filter.cpp  two_pass_blur_filter.h
